removed most of the content kept profile and namespaced key apis as separate modules