@@ -63,20 +63,6 @@ dependencies {
 }
 
 //
-// Preview features
-//
-
-tasks.withType<JavaCompile>().configureEach {
-    options.compilerArgs.add("--enable-preview")
-}
-tasks.withType<Test>().configureEach {
-    jvmArgs("--enable-preview")
-}
-tasks.withType<JavaExec>().configureEach {
-    jvmArgs("--enable-preview")
-}
-
-//
 // Task configurations
 //
 
